Added custom success messages

--- a/modules/guestbook/guestbook-web/src/main/resources/content/Language.properties
+++ b/modules/guestbook/guestbook-web/src/main/resources/content/Language.properties
@@ -1,2 +1,5 @@
-javax.portlet.title.com_liferay_docs_guestbook_portlet_GuestbookPortlet=Guestbook
-guestbook.caption=Hello from Guestbook!
+entry-added=Entry added successfully.
+entry-deleted=Entry deleted successfully.
+guestbook-added=Guestbook added successfully.
+guestbook-updated=Guestbook updated successfully.
+guestbook-deleted=Guestbook deleted successfully.
