--- a/modules/guestbook/guestbook-service/build.gradle
+++ b/modules/guestbook/guestbook-service/build.gradle
@@ -16,6 +16,10 @@ dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.petra.reflect"
 	compileOnly group: "com.liferay", name: "com.liferay.portal.search.spi"
 	compileOnly group: "com.liferay", name: "com.liferay.portal.search.api"
+	compileOnly group: "javax.portlet", name: "portlet-api"
+	compileOnly group: "javax.servlet", name: "javax.servlet-api"
+	
+	
 }
 
 buildService {
